tests/parser/if-statement-test-expression-error.stderr
error: expected expression
 --> $DIR/if-statement-test-expression-error.lox:1:4
  |
1 | if / {}
  |    ^
